chore(saltlint): test release candidate `v0.1.0`
* Automated using https://github.com/myii/ssf-formula/pull/81

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ jobs:
       name: 'Lint: salt-lint, yamllint, rubocop & commitlint'
       before_install: skip
       script:
-        # Install and run `salt-lint`
-        - pip install --user salt-lint
+        # Install and run `salt-lint` (release candidate `v0.1.0`)
+        - pip install --user https://github.com/myii/salt-lint/archive/71_0.zip
         - git ls-files | grep '\.sls$\|\.jinja$\|\.j2$\|\.tmpl$'
                        | xargs -I {} salt-lint {}
         # Install and run `yamllint`
@@ -46,18 +46,6 @@ jobs:
         - npm install @commitlint/config-conventional -D
         - npm install @commitlint/travis-cli -D
         - commitlint-travis
-
-    ## Define the rest of the matrix based on Kitchen testing
-    # Make sure the instances listed below match up with
-    # the `platforms` defined in `kitchen.yml`
-    - env: INSTANCE=repositories-debian-10-develop-py3
-    # - env: INSTANCE=preferences-debian-10-develop-py3
-    # - env: INSTANCE=repositories-ubuntu-1804-develop-py3
-    # - env: INSTANCE=preferences-ubuntu-1804-develop-py3
-    - env: INSTANCE=repositories-debian-9-2019-2-py3
-    - env: INSTANCE=preferences-debian-9-2019-2-py3
-    - env: INSTANCE=repositories-ubuntu-1804-2019-2-py3
-    - env: INSTANCE=preferences-ubuntu-1804-2019-2-py3
 
     ## Define the release stage that runs `semantic-release`
     - stage: release
