ci(kitchen+travis): upgrade matrix after `2019.2.2` release
* Automated using https://github.com/myii/ssf-formula/pull/86

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
       script:
         # Install and run `salt-lint`
         - pip install --user salt-lint
-        - git ls-files | grep '\.sls$\|\.jinja$\|\.j2$\|\.tmpl$'
+        - git ls-files | grep '\.sls$\|\.jinja$\|\.j2$\|\.tmpl$\|\.tst$'
                        | xargs -I {} salt-lint {}
         # Install and run `yamllint`
         # Need at least `v1.17.0` for the `yaml-files` setting
@@ -51,9 +51,9 @@ jobs:
     # Make sure the instances listed below match up with
     # the `platforms` defined in `kitchen.yml`
     - env: INSTANCE=repositories-debian-10-master-py3
-    # - env: INSTANCE=preferences-debian-10-master-py3
-    # - env: INSTANCE=repositories-ubuntu-1804-develop-py3
-    # - env: INSTANCE=preferences-ubuntu-1804-develop-py3
+    - env: INSTANCE=preferences-debian-10-master-py3
+    # - env: INSTANCE=repositories-ubuntu-1804-master-py3
+    # - env: INSTANCE=preferences-ubuntu-1804-master-py3
     - env: INSTANCE=repositories-debian-9-2019-2-py3
     - env: INSTANCE=preferences-debian-9-2019-2-py3
     - env: INSTANCE=repositories-ubuntu-1804-2019-2-py3
