--- a/kitchen.yml
+++ b/kitchen.yml
@@ -11,19 +11,19 @@ driver:
 # Make sure the platforms listed below match up with
 # the `env.matrix` instances defined in `.travis.yml`
 platforms:
-  ## SALT `develop` => `master`
+  ## SALT `master`
   - name: debian-10-master-py3
     driver:
       image: netmanagers/salt-master-py3:debian-10
       provision_command:
         - curl -o bootstrap-salt.sh -L https://bootstrap.saltstack.com
         - sh bootstrap-salt.sh -XdPbfrq -x python3 git master
-  - name: ubuntu-1804-develop-py3
+  - name: ubuntu-1804-master-py3
     driver:
-      image: netmanagers/salt-develop-py3:ubuntu-18.04
+      image: netmanagers/salt-master-py3:ubuntu-18.04
       provision_command:
         - curl -o bootstrap-salt.sh -L https://bootstrap.saltstack.com
-        - sh bootstrap-salt.sh -XdPbfrq -x python3 git develop
+        - sh bootstrap-salt.sh -XdPbfrq -x python3 git master
 
   ## SALT `2019.2`
   - name: debian-9-2019-2-py3
