feat(unattended): add newer options from upstream
* upstream has new options now included in formula
* updated pillar.example with new options
* inspec tests for this new options are in place

Also:

* tests are included in travis

Signed-off-by: Felipe Zipitria <fzipitria@perceptyx.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,12 +60,16 @@ jobs:
     # the `platforms` defined in `kitchen.yml`
     - env: INSTANCE=repositories-debian-10-master-py3
     - env: INSTANCE=preferences-debian-10-master-py3
+    - env: INSTANCE=unattended-debian-10-master-py3
     # - env: INSTANCE=repositories-ubuntu-1804-master-py3
     # - env: INSTANCE=preferences-ubuntu-1804-master-py3
+    # - env: INSTANCE=unattended-ubuntu-1804-master-py3
     - env: INSTANCE=repositories-debian-9-2019-2-py3
     - env: INSTANCE=preferences-debian-9-2019-2-py3
+    - env: INSTANCE=unattended-debian-9-2019-2-py3
     - env: INSTANCE=repositories-ubuntu-1804-2019-2-py3
     - env: INSTANCE=preferences-ubuntu-1804-2019-2-py3
+    - env: INSTANCE=unattended-ubuntu-1804-2019-2-py3
 
     ## Define the release stage that runs `semantic-release`
     - stage: 'release'
