--- a/.travis.yml
+++ b/.travis.yml
@@ -26,34 +26,7 @@ stages:
     if: 'branch = master AND type != pull_request'
 jobs:
   include:
-    ## Define the test stage that runs the linters (and testing matrix, if applicable)
-
-    # Run all of the linters in a single job
-    - language: 'node_js'
-      node_js: 'lts/*'
-      env: 'Lint'
-      name: 'Lint: salt-lint, yamllint, rubocop, shellcheck & commitlint'
-      before_install: 'skip'
-      script:
-        # Install and run `salt-lint`
-        - pip install --user salt-lint
-        - git ls-files -- '*.sls' '*.jinja' '*.j2' '*.tmpl' '*.tst'
-                        | xargs salt-lint
-        # Install and run `yamllint`
-        # Need at least `v1.17.0` for the `yaml-files` setting
-        - pip install --user yamllint>=1.17.0
-        - yamllint -s .
-        # Install and run `rubocop`
-        - gem install rubocop
-        - rubocop -d
-        # Run `shellcheck` (already pre-installed in Travis)
-        - shellcheck --version
-        - git ls-files -- '*.sh' '*.bash' '*.ksh'
-                        | xargs shellcheck
-        # Install and run `commitlint`
-        - npm i -D @commitlint/config-conventional
-                   @commitlint/travis-cli
-        - commitlint-travis
+    ## Define the test stage that runs the linters (and testing matrix, if applicable) #}
 
     ## Define the rest of the matrix based on Kitchen testing
     # Make sure the instances listed below match up with
@@ -62,17 +35,17 @@ jobs:
     # - env: INSTANCE=preferences-debian-10-master-py3
     # - env: INSTANCE=unattended-debian-10-master-py3
     - env: INSTANCE=debian-10-master-py3
-    - env: INSTANCE=repositories-ubuntu-1804-master-py3
+    # - env: INSTANCE=repositories-ubuntu-1804-master-py3
     # - env: INSTANCE=preferences-ubuntu-1804-master-py3
     # - env: INSTANCE=unattended-ubuntu-1804-master-py3
-    # - env: INSTANCE=ubuntu-1804-master-py3
+    - env: INSTANCE=ubuntu-1804-master-py3
     # - env: INSTANCE=repositories-debian-9-2019-2-py3
-    - env: INSTANCE=preferences-debian-9-2019-2-py3
+    # - env: INSTANCE=preferences-debian-9-2019-2-py3
     # - env: INSTANCE=unattended-debian-9-2019-2-py3
     # - env: INSTANCE=debian-9-2019-2-py3
     # - env: INSTANCE=repositories-ubuntu-1804-2019-2-py3
     # - env: INSTANCE=preferences-ubuntu-1804-2019-2-py3
-    - env: INSTANCE=unattended-ubuntu-1804-2019-2-py3
+    # - env: INSTANCE=unattended-ubuntu-1804-2019-2-py3
     # - env: INSTANCE=ubuntu-1804-2019-2-py3
 
     ## Define the release stage that runs `semantic-release`
