ci(kitchen+travis): test for regressions

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -27,6 +27,14 @@ platforms:
     driver:
       image: netmanagers/salt-2019.2-py3:ubuntu-18.04
 
+  ## SALT `2018.3`
+  - name: debian-8-2018-3-py2
+    driver:
+      image: netmanagers/salt-2018.3-py2:debian-8
+  - name: ubuntu-1604-2018-3-py2
+    driver:
+      image: netmanagers/salt-2018.3-py2:ubuntu-16.04
+
 provisioner:
   name: salt_solo
   log_level: debug
