--- a/.travis.yml
+++ b/.travis.yml
@@ -28,32 +28,32 @@ jobs:
   include:
     ## Define the test stage that runs the linters (and testing matrix, if applicable)
 
-    # Run all of the linters in a single job
-    - language: 'node_js'
-      node_js: 'lts/*'
-      env: 'Lint'
-      name: 'Lint: salt-lint, yamllint, rubocop, shellcheck & commitlint'
-      before_install: 'skip'
-      script:
-        # Install and run `salt-lint`
-        - pip install --user salt-lint
-        - git ls-files -- '*.sls' '*.jinja' '*.j2' '*.tmpl' '*.tst'
-                        | xargs salt-lint
-        # Install and run `yamllint`
-        # Need at least `v1.17.0` for the `yaml-files` setting
-        - pip install --user yamllint>=1.17.0
-        - yamllint -s .
-        # Install and run `rubocop`
-        - gem install rubocop
-        - rubocop -d
-        # Run `shellcheck` (already pre-installed in Travis)
-        - shellcheck --version
-        - git ls-files -- '*.sh' '*.bash' '*.ksh'
-                        | xargs shellcheck
-        # Install and run `commitlint`
-        - npm i -D @commitlint/config-conventional
-                   @commitlint/travis-cli
-        - commitlint-travis
+    # # Run all of the linters in a single job
+    # - language: 'node_js'
+    #   node_js: 'lts/*'
+    #   env: 'Lint'
+    #   name: 'Lint: salt-lint, yamllint, rubocop, shellcheck & commitlint'
+    #   before_install: 'skip'
+    #   script:
+    #     # Install and run `salt-lint`
+    #     - pip install --user salt-lint
+    #     - git ls-files -- '*.sls' '*.jinja' '*.j2' '*.tmpl' '*.tst'
+    #                     | xargs salt-lint
+    #     # Install and run `yamllint`
+    #     # Need at least `v1.17.0` for the `yaml-files` setting
+    #     - pip install --user yamllint>=1.17.0
+    #     - yamllint -s .
+    #     # Install and run `rubocop`
+    #     - gem install rubocop
+    #     - rubocop -d
+    #     # Run `shellcheck` (already pre-installed in Travis)
+    #     - shellcheck --version
+    #     - git ls-files -- '*.sh' '*.bash' '*.ksh'
+    #                     | xargs shellcheck
+    #     # Install and run `commitlint`
+    #     - npm i -D @commitlint/config-conventional
+    #                @commitlint/travis-cli
+    #     - commitlint-travis
 
     ## Define the rest of the matrix based on Kitchen testing
     # Make sure the instances listed below match up with
@@ -62,18 +62,20 @@ jobs:
     # - env: INSTANCE=preferences-debian-10-master-py3
     # - env: INSTANCE=unattended-debian-10-master-py3
     - env: INSTANCE=debian-10-master-py3
-    - env: INSTANCE=repositories-ubuntu-1804-master-py3
+    # - env: INSTANCE=repositories-ubuntu-1804-master-py3
     # - env: INSTANCE=preferences-ubuntu-1804-master-py3
     # - env: INSTANCE=unattended-ubuntu-1804-master-py3
-    # - env: INSTANCE=ubuntu-1804-master-py3
+    - env: INSTANCE=ubuntu-1804-master-py3
     # - env: INSTANCE=repositories-debian-9-2019-2-py3
-    - env: INSTANCE=preferences-debian-9-2019-2-py3
+    # - env: INSTANCE=preferences-debian-9-2019-2-py3
     # - env: INSTANCE=unattended-debian-9-2019-2-py3
-    # - env: INSTANCE=debian-9-2019-2-py3
+    - env: INSTANCE=debian-9-2019-2-py3
     # - env: INSTANCE=repositories-ubuntu-1804-2019-2-py3
     # - env: INSTANCE=preferences-ubuntu-1804-2019-2-py3
-    - env: INSTANCE=unattended-ubuntu-1804-2019-2-py3
-    # - env: INSTANCE=ubuntu-1804-2019-2-py3
+    # - env: INSTANCE=unattended-ubuntu-1804-2019-2-py3
+    - env: INSTANCE=ubuntu-1804-2019-2-py3
+    - env: INSTANCE=debian-8-2018-3-py2
+    - env: INSTANCE=ubuntu-1604-2018-3-py2
 
     ## Define the release stage that runs `semantic-release`
     - stage: 'release'
