--- a/kitchen.yml
+++ b/kitchen.yml
@@ -14,26 +14,26 @@ platforms:
   ## SALT `master`
   - name: debian-10-master-py3
     driver:
-      image: netmanagers/salt-master-py3:debian-10
+      image: myii/salt-master-py3:debian-10
   - name: ubuntu-1804-master-py3
     driver:
-      image: netmanagers/salt-master-py3:ubuntu-18.04
+      image: myii/salt-master-py3:ubuntu-18.04
 
   ## SALT `2019.2`
   - name: debian-9-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:debian-9
+      image: myii/salt-2019.2-py3:debian-9
   - name: ubuntu-1804-2019-2-py3
     driver:
-      image: netmanagers/salt-2019.2-py3:ubuntu-18.04
+      image: myii/salt-2019.2-py3:ubuntu-18.04
 
   ## SALT `2018.3`
   - name: debian-8-2018-3-py2
     driver:
-      image: netmanagers/salt-2018.3-py2:debian-8
+      image: myii/salt-2018.3-py2:debian-8
   - name: ubuntu-1604-2018-3-py2
     driver:
-      image: netmanagers/salt-2018.3-py2:ubuntu-16.04
+      image: myii/salt-2018.3-py2:ubuntu-16.04
 
 provisioner:
   name: salt_solo
