--- a/kitchen.yml
+++ b/kitchen.yml
@@ -11,21 +11,22 @@ driver:
 # Make sure the platforms listed below match up with
 # the `env.matrix` instances defined in `.travis.yml`
 platforms:
-  ## SALT `master`
-  - name: debian-10-master-py3
+  ## SALT `tiamat`
+  - name: debian-10-tiamat-py3
     driver:
-      image: saltimages/salt-master-py3:debian-10
-  - name: ubuntu-1804-master-py3
+      image: saltimages/salt-tiamat-py3:debian-10
+  - name: debian-9-tiamat-py3
     driver:
-      image: saltimages/salt-master-py3:ubuntu-18.04
-
-  ## SALT `2019.2`
-  - name: debian-9-2019-2-py3
+      image: saltimages/salt-tiamat-py3:debian-9
+  - name: ubuntu-2004-tiamat-py3
     driver:
-      image: saltimages/salt-2019.2-py3:debian-9
-  - name: ubuntu-1804-2019-2-py3
+      image: saltimages/salt-tiamat-py3:ubuntu-20.04
+  - name: ubuntu-1804-tiamat-py3
     driver:
-      image: saltimages/salt-2019.2-py3:ubuntu-18.04
+      image: saltimages/salt-tiamat-py3:ubuntu-18.04
+  - name: ubuntu-1604-tiamat-py3
+    driver:
+      image: saltimages/salt-tiamat-py3:ubuntu-16.04
 
 provisioner:
   name: salt_solo
