--- a/.travis.yml
+++ b/.travis.yml
@@ -59,20 +59,20 @@ jobs:
     # Make sure the instances listed below match up with
     # the `platforms` defined in `kitchen.yml`
     - env: INSTANCE=repositories-debian-10-tiamat-py3
-    - env: INSTANCE=preferences-debian-10-tiamat-py3
-    - env: INSTANCE=unattended-debian-10-tiamat-py3
+    # - env: INSTANCE=preferences-debian-10-tiamat-py3
+    # - env: INSTANCE=unattended-debian-10-tiamat-py3
     - env: INSTANCE=repositories-debian-9-tiamat-py3
-    - env: INSTANCE=preferences-debian-9-tiamat-py3
-    - env: INSTANCE=unattended-debian-9-tiamat-py3
+    # - env: INSTANCE=preferences-debian-9-tiamat-py3
+    # - env: INSTANCE=unattended-debian-9-tiamat-py3
     - env: INSTANCE=repositories-ubuntu-2004-tiamat-py3
-    - env: INSTANCE=preferences-ubuntu-2004-tiamat-py3
-    - env: INSTANCE=unattended-ubuntu-2004-tiamat-py3
+    # - env: INSTANCE=preferences-ubuntu-2004-tiamat-py3
+    # - env: INSTANCE=unattended-ubuntu-2004-tiamat-py3
     - env: INSTANCE=repositories-ubuntu-1804-tiamat-py3
-    - env: INSTANCE=preferences-ubuntu-1804-tiamat-py3
-    - env: INSTANCE=unattended-ubuntu-1804-tiamat-py3
+    # - env: INSTANCE=preferences-ubuntu-1804-tiamat-py3
+    # - env: INSTANCE=unattended-ubuntu-1804-tiamat-py3
     - env: INSTANCE=repositories-ubuntu-1604-tiamat-py3
-    - env: INSTANCE=preferences-ubuntu-1604-tiamat-py3
-    - env: INSTANCE=unattended-ubuntu-1604-tiamat-py3
+    # - env: INSTANCE=preferences-ubuntu-1604-tiamat-py3
+    # - env: INSTANCE=unattended-ubuntu-1604-tiamat-py3
 
     ## Define the release stage that runs `semantic-release`
     - stage: 'release'
