--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,77 +45,77 @@ stages:
 variables:
   DOCKER_DRIVER: 'overlay2'
 
-###############################################################################
-# `lint` stage: `commitlint`, `pre-commit` & `rubocop` (latest, failure allowed)
-###############################################################################
-commitlint:
-  stage: *stage_lint
-  image: *image_commitlint
-  script:
-    # Add `upstream` remote to get access to `upstream/master`
-    - 'git remote add upstream
-       https://gitlab.com/saltstack-formulas/apt-formula.git'
-    - 'git fetch --all'
-    # Set default commit hashes for `--from` and `--to`
-    - 'export COMMITLINT_FROM="$(git merge-base upstream/master HEAD)"'
-    - 'export COMMITLINT_TO="${CI_COMMIT_SHA}"'
-    # `coqbot` adds a merge commit to test PRs on top of the latest commit in
-    # the repo; amend this merge commit message to avoid failure
-    - |
-      if [ "${GITLAB_USER_LOGIN}" = "coqbot" ] \
-      && [ "${CI_COMMIT_BRANCH}" != "master" ]; then
-        git commit --amend -m \
-          'chore: reword coqbot merge commit message for commitlint'
-        export COMMITLINT_TO=HEAD
-      fi
-    # Run `commitlint`
-    - 'commitlint --from "${COMMITLINT_FROM}"
-                  --to   "${COMMITLINT_TO}"
-                  --verbose'
-
-pre-commit:
-  stage: *stage_lint
-  image: *image_precommit
-  # https://pre-commit.com/#gitlab-ci-example
-  variables:
-    PRE_COMMIT_HOME: '${CI_PROJECT_DIR}/.cache/pre-commit'
-  cache:
-    key: '${CI_JOB_NAME}'
-    paths:
-      - '${PRE_COMMIT_HOME}'
-  script:
-    - 'pre-commit run --all-files --color always --verbose'
-
-# Use a separate job for `rubocop` other than the one potentially run by `pre-commit`
-# - The `pre-commit` check will only be available for formulas that pass the default
-#   `rubocop` check -- and must continue to do so
-# - This job is allowed to fail, so can be used for all formulas
-# - Furthermore, this job uses all of the latest `rubocop` features & cops,
-#   which will help when upgrading the `rubocop` linter used in `pre-commit`
-rubocop:
-  allow_failure: true
-  stage: *stage_lint
-  image: *image_rubocop
-  script:
-    - 'rubocop -d -P -S --enable-pending-cops'
-
-###############################################################################
-# Define `test` template
-###############################################################################
-.test_instance:
-  stage: *stage_test
-  image: *image_dindruby
-  services: *services_docker_dind
-  variables: *variables_bundler
-  cache: *cache_bundler
-  before_script:
-    # TODO: This should work from the env vars above automatically
-    - 'bundle config set path "${BUNDLE_CACHE_PATH}"'
-    - 'bundle config set without "${BUNDLE_WITHOUT}"'
-    - 'bundle install'
-  script:
-    # Alternative value to consider: `${CI_JOB_NAME}`
-    - 'bin/kitchen verify "${DOCKER_ENV_CI_JOB_NAME}"'
+# ###############################################################################
+# # `lint` stage: `commitlint`, `pre-commit` & `rubocop` (latest, failure allowed)
+# ###############################################################################
+# commitlint:
+#   stage: *stage_lint
+#   image: *image_commitlint
+#   script:
+#     # Add `upstream` remote to get access to `upstream/master`
+#     - 'git remote add upstream
+#        https://gitlab.com/saltstack-formulas/apt-formula.git'
+#     - 'git fetch --all'
+#     # Set default commit hashes for `--from` and `--to`
+#     - 'export COMMITLINT_FROM="$(git merge-base upstream/master HEAD)"'
+#     - 'export COMMITLINT_TO="${CI_COMMIT_SHA}"'
+#     # `coqbot` adds a merge commit to test PRs on top of the latest commit in
+#     # the repo; amend this merge commit message to avoid failure
+#     - |
+#       if [ "${GITLAB_USER_LOGIN}" = "coqbot" ] \
+#       && [ "${CI_COMMIT_BRANCH}" != "master" ]; then
+#         git commit --amend -m \
+#           'chore: reword coqbot merge commit message for commitlint'
+#         export COMMITLINT_TO=HEAD
+#       fi
+#     # Run `commitlint`
+#     - 'commitlint --from "${COMMITLINT_FROM}"
+#                   --to   "${COMMITLINT_TO}"
+#                   --verbose'
+#
+# pre-commit:
+#   stage: *stage_lint
+#   image: *image_precommit
+#   # https://pre-commit.com/#gitlab-ci-example
+#   variables:
+#     PRE_COMMIT_HOME: '${CI_PROJECT_DIR}/.cache/pre-commit'
+#   cache:
+#     key: '${CI_JOB_NAME}'
+#     paths:
+#       - '${PRE_COMMIT_HOME}'
+#   script:
+#     - 'pre-commit run --all-files --color always --verbose'
+#
+# # Use a separate job for `rubocop` other than the one potentially run by `pre-commit`
+# # - The `pre-commit` check will only be available for formulas that pass the default
+# #   `rubocop` check -- and must continue to do so
+# # - This job is allowed to fail, so can be used for all formulas
+# # - Furthermore, this job uses all of the latest `rubocop` features & cops,
+# #   which will help when upgrading the `rubocop` linter used in `pre-commit`
+# rubocop:
+#   allow_failure: true
+#   stage: *stage_lint
+#   image: *image_rubocop
+#   script:
+#     - 'rubocop -d -P -S --enable-pending-cops'
+#
+# ###############################################################################
+# # Define `test` template
+# ###############################################################################
+# .test_instance:
+#   stage: *stage_test
+#   image: *image_dindruby
+#   services: *services_docker_dind
+#   variables: *variables_bundler
+#   cache: *cache_bundler
+#   before_script:
+#     # TODO: This should work from the env vars above automatically
+#     - 'bundle config set path "${BUNDLE_CACHE_PATH}"'
+#     - 'bundle config set without "${BUNDLE_WITHOUT}"'
+#     - 'bundle install'
+#   script:
+#     # Alternative value to consider: `${CI_JOB_NAME}`
+#     - 'bin/kitchen verify "${DOCKER_ENV_CI_JOB_NAME}"'
 
 ###############################################################################
 # `test` stage: each instance below uses the `test` template above
@@ -131,23 +131,23 @@ rubocop:
 # repositories-debian-10-master-py3: {extends: '.test_instance'}
 # preferences-debian-10-master-py3: {extends: '.test_instance'}
 # unattended-debian-10-master-py3: {extends: '.test_instance'}
-debian-10-master-py3: {extends: '.test_instance'}
+# debian-10-master-py3: {extends: '.test_instance'}
 # repositories-debian-9-master-py3: {extends: '.test_instance'}
 # preferences-debian-9-master-py3: {extends: '.test_instance'}
 # unattended-debian-9-master-py3: {extends: '.test_instance'}
-debian-9-master-py3: {extends: '.test_instance'}
+# debian-9-master-py3: {extends: '.test_instance'}
 # repositories-ubuntu-2004-master-py3: {extends: '.test_instance'}
 # preferences-ubuntu-2004-master-py3: {extends: '.test_instance'}
 # unattended-ubuntu-2004-master-py3: {extends: '.test_instance'}
-ubuntu-2004-master-py3: {extends: '.test_instance'}
+# ubuntu-2004-master-py3: {extends: '.test_instance'}
 # repositories-ubuntu-1804-master-py3: {extends: '.test_instance'}
 # preferences-ubuntu-1804-master-py3: {extends: '.test_instance'}
 # unattended-ubuntu-1804-master-py3: {extends: '.test_instance'}
-ubuntu-1804-master-py3: {extends: '.test_instance'}
+# ubuntu-1804-master-py3: {extends: '.test_instance'}
 # repositories-ubuntu-1604-master-py3: {extends: '.test_instance'}
 # preferences-ubuntu-1604-master-py3: {extends: '.test_instance'}
 # unattended-ubuntu-1604-master-py3: {extends: '.test_instance'}
-ubuntu-1604-master-py3: {extends: '.test_instance'}
+# ubuntu-1604-master-py3: {extends: '.test_instance'}
 # repositories-debian-10-3003-0-py3: {extends: '.test_instance'}
 # repositories-debian-9-3003-0-py3: {extends: '.test_instance'}
 # repositories-ubuntu-2004-3003-0-py3: {extends: '.test_instance'}
@@ -173,7 +173,6 @@ ubuntu-1604-master-py3: {extends: '.test_instance'}
 # `release` stage: `semantic-release`
 ###############################################################################
 semantic-release:
-  only: *only_branch_master_parent_repo
   stage: *stage_release
   image: *image_semanticrelease
   variables:
